--- a/drone-flight-dashboard/index.html
+++ b/drone-flight-dashboard/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/src/assets/images/drone.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Бпла аналитикс</title>
+    <title>БПЛА аналитикс</title>
   </head>
   <body>
     <div id="app"></div>
